...
    <string name="share">Share</string>
    <string name="share_app">Share to</string>
    <string name="flow_sys">Follow system</string>
    <string name="add">Add</string>
    <string name="import_book_source">Import book sources</string>
    <string name="import_local">Import local</string>
    <string name="import_on_line">Import online</string>
    <string name="replace_rule_title">Replacement</string>
    <string name="manual_replace_rule">Select replacements</string>
    <string name="replace_rule_edit">Edit replacement rule</string>
    <string name="replace_rule">Pattern</string>
    <string name="replace_to">Replacement</string>
    <string name="img_cover">Cover</string>
...
    <string name="page_anim_scroll">Scroll</string>
    <string name="page_anim_none">None</string>
    <string name="up_change_source_last_chapter_t">Update the latest chapter after changed origin in the background</string>
    <string name="up_change_source_last_chapter_s">if enabled,the update will start 1 minute later when the software is run</string>
    <string name="behavior_main_t">Auto hide ToolBar</string>
    <string name="behavior_main_s">The toolbar will be hidden automatically when scroll the Bookshelf</string>
    <string name="login">Login</string>
    <string name="login_source">Login%s</string>
    <string name="success">Success</string>
    <string name="source_no_login">The current source has not configured with a login address</string>
    <string name="no_prev_page">No prior page</string>
    <string name="no_next_page">No next page</string>

...
    <string name="group">Group</string>
    <string name="group_s">Group: %s</string>
    <string name="toc_s">Chapters: %s</string>
    <string name="enable_explore">Enable Discovery</string>
    <string name="disable_explore">Disable Discovery</string>
    <string name="enable_selection">Enable selected</string>
    <string name="disable_selection">Disable selected</string>
    <string name="export_selection">Export selected</string>
    <string name="export">Export</string>
    <string name="load_toc">Load chapters</string>
    <string name="load_info">Load book detail</string>
    <string name="tts">TTS</string>
    <string name="web_dav_pw">WebDav password</string>
...
    <string name="auto_task_script">JavaScript</string>
    <string name="auto_task_header">Request headers</string>
    <string name="auto_task_js_lib">Shared JavaScript library</string>
    <string name="auto_task_concurrent_rate">Concurrent rate</string>
    <string name="auto_task_cookie_jar">Cookie jar</string>
    <string name="auto_task_name_required">Enter a task name</string>
    <string name="auto_task_cron_invalid">Enter a valid five-field cron schedule</string>
    <string name="auto_task_batch_cron">Change schedule</string>
    <string name="auto_task_script_empty">Enter a JavaScript task</string>
    <string name="auto_task_no_tasks">No automatic tasks</string>
    <string name="auto_task_no_log">This task has not produced a log yet</string>
    <string name="auto_task_log">Last run log</string>
    <string name="auto_task_move_up">Move up</string>
    <string name="auto_task_move_down">Move down</string>
    <string name="auto_task_delete_confirm">Delete “%1$s”?</string>
    <string name="auto_task_debug_busy">Another source debug session is active</string>
    <string name="auto_task_run_again">Run again</string>
    <string name="auto_task_notify_title">Automatic task</string>
    <string name="auto_task_notify_content">%1$s completed</string>
    <string name="auto_task_book_update_title">%1$s updated</string>
...
